# liquid-wlan

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  LICENSE  NOTES  README.md  README.rst  README.txt  TODO  bootstrap.sh  configure.ac  makefile.in  pyproject.toml  reconf  requirements.txt
.github/workflows/: core.yml
annex-g-data/: G1.c  G11.c  G12.c  G13.c  G14.c  G16.c  G17.c  G18.c  G2.c  G21.c  G22.c  G24.c  G3.c  G4.c  G5.c  G6.c  G7.c  G8.c  G9.c  README
autotest/: CMakeLists.txt  annexg_datascramble_autotest.c  annexg_framegen_autotest.c  datascrambler_autotest.c  interleaver_autotest.c  interleaver_data_autotest.c  interleaver_signal_autotest.c  signalfield_encoder_autotest.c  signalfield_interleaver_autotest.c  signalfield_pack_autotest.c  signalfield_symbolgen_autotest.c  wlan_modem_autotest.c  wlanframesync_autotest.c
benchmark/: wlanframegen_benchmark.c  wlanframesync_benchmark.c
bind/: liquid-wlan.python.cc  liquid-wlan.python.hh  wlanframegen.cc  wlanframegen.hh  wlanframegen_example.py  wlanframesync.cc  wlanframesync.hh  wlanframesync_example.py
cmake/: summary.cmake  version.cmake
examples/: CMakeLists.txt  README.md  bind_example.cc  bind_example.py  generator.py  wififramesync_example.c  wlanframegen_example.c  wlanframesync_example.c  wlanframesync_performance_example.c
include/: liquid-802-11.h  liquid-802-11.internal.h  liquid-802.11.h  liquid-802.11.internal.h  liquid-wlan.h  liquid-wlan.internal.h  liquid-wlan.python.hh  wlanframegen.hh
sandbox/: CMakeLists.txt  README.md  annexg_fec_test.c  datascrambler_test.c  interleaver_table_test.c  interleaver_test.c  packet_codec_test.c  signalfield_fec_test.c  signalfield_symbolgen_test.c  signalfield_test.c
src/: interleaver.c  libliquid_802_11.c  libliquid_wlan.c  liquid.python.cc  utility.c  wifi_data_scrambler.c  wifi_fec.c  wifi_interleaver.c  wifi_signal.c  wififrame.common.c  wififramegen.c  wififramesync.c  wlan_data_scrambler.c  wlan_fec.c  wlan_interleaver.c  wlan_intlv_R12.c  wlan_intlv_R18.c  wlan_intlv_R24.c  wlan_intlv_R36.c  wlan_intlv_R48.c  wlan_intlv_R54.c  wlan_intlv_R6.c  wlan_intlv_R9.c  wlan_lfsr.c  wlan_modem.c  wlan_packet.c  wlan_signal.c  wlanframe.common.c  wlanframegen.c  wlanframegen.cc  wlanframesync.c
src/gentab/: wlan_interleaver_gentab.c
src/libfec/: viterbi27.c  viterbi27_port.c
test/: NOTES  annexg_data.c  annexg_packet.c  annexg_signal.c  convert_array.m  encoding_test.c  ofdmframe64.readme.txt
